Font spacing, layout changes, post fixes

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
   background-color: #fafbfc;
   font-family: 'Raleway', Arial, sans-serif;
   font-weight: 400;
-  font-size: 0.85em;
+  font-size: 0.95em;
   overflow: hidden;
 }
 
@@ -138,6 +138,7 @@ a:hover {
   margin-bottom: 0.35em;
   font-size: 3.5em;
   text-transform: uppercase;
+  line-height: 1.1em;
 }
 
 .post {
@@ -219,13 +220,13 @@ a:hover {
 .sidebar {
   float: left;
   width: 14%;
-  padding-left: 11em;
-  padding-right: 2.125em;
+  padding-left: 1em;
+  padding-right: 1.125em;
   border-right: 1px solid #e7e7e7;
 }
 
 .content {
-  padding-left: 2.125em;
+  padding-left: 4.125em;
 }
 
 .header {
